--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>Macbeth project</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <img id="image">
         <div id="title"></div>
         <div id="choices"></div>
         <div id="results">
